     To make this rule work, phrases are now unified in disambiguation.xml: for
     example, 'Mann' in the phrase 'ein Mann' will only retain its nominative
     reading (SUB:NOM:SIN:MAS), whereas it used to have also accusative and
     dative readings (SUB:AKK:SIN:MAS, SUB:DAT:SIN:MAS).
     (https://github.com/languagetool-org/languagetool/issues/233)

-Polish:
    -added a few new rules

-Portuguese:
    -added/improved several rules
    -added many dozens of compound words

-Russian:
    -added and improved rules

-Bitext rules:
    -added a simple rule for checking whether translations end with the same punctuation
     mark as the original (this includes only .?! characters).

-Spelling:
    -The new files at <languageCode>/hunspell/spelling.txt can be used to add
     accepted words to the spell checker that are also considered when creating
     suggestions for misspelled words.
     This is similar to the <languageCode>/hunspell/ignore.txt files, which list
     accepted words which are *not* used when creating suggestions for
     misspelled words.

-API:
    -JLanguageTool.activateDefaultPatternRules() and
     JLanguageTool.activateDefaultFalseFriendRules() have been removed - all
     pattern rules and false friend rules (if a second language is specified)
     are now activated automatically when the constructor of JLanguageTool is called.
     Should you need a checker without the XML-based pattern rules, extend your
     language class (e.g. 'English') with one that overwrites the getPatternRules()
     method and returns an empty list there.
    -ManualTagger.lookup() has been replaced by ManualTagger.tag() after being
     deprecated since the latest release
    -All static methods and fields from class 'Language' have been moved to the new
     class 'Languages'. For now, the methods/fields in class Language still exist
     but have been deprecated.
    -LanguageIdentifierTools has been removed. Use LanguageIdentifier instead.