@@ -88,6 +88,9 @@ public class CommandLineParser {
       } else if (args[i].equals("--falsefriends")) {
         checkArguments("--falsefriends", i, args);
         options.setFalseFriendFile(args[++i]);
+      } else if (args[i].equals("--bitextrules")) {
+        checkArguments("--bitextrules", i, args);
+        options.setBitextRuleFile(args[++i]);
       } else if (args[i].equals("-c") || args[i].equals("--encoding")) {
         checkArguments("-c/--encoding", i, args);
         options.setEncoding(args[++i]);
@@ -167,6 +170,7 @@ public class CommandLineParser {
             + "  --rulefile FILE          use an additional grammar file; if the filename contains a known language code,\n"
             + "                             it is used in addition of standard rules\n"
             + "  --falsefriends FILE      use external false friend file to be used along with the built-in rules\n"
+            + "  --bitextrules  FILE      use external bitext XML rule file (useful only in the bitext mode\n"
             + "  --languagemodel DIR      a directory with a '3grams' sub directory with a Lucene index that\n"
             + "                           contains ngram occurrence counts; activates the confusion rule if supported\n"
             + "  --xmlfilter              remove XML/HTML elements from input before checking (this is deprecated)");
