@@ -28,7 +28,7 @@ LanguageTool Change Log
      (https://github.com/languagetool-org/languagetool/issues/233)
 
 -Polish:
-    -added a few new rules
+    -added several new rules
 
 -Portuguese:
     -added/improved several rules
@@ -40,6 +40,10 @@ LanguageTool Change Log
 -Bitext rules:
     -added a simple rule for checking whether translations end with the same punctuation
      mark as the original (this includes only .?! characters).
+    -it is now possible to add external bitext rule files on the command line, by using
+     --bitextrule <FILE> option. The file path has to be absolute. Note: this allows
+     using bitext rules also for languages that have no bitext rules included by
+     default.
 
 -Spelling:
     -The new files at <languageCode>/hunspell/spelling.txt can be used to add
